Resolved modal popup layout issue in Firefox

--- a/style.css
+++ b/style.css
@@ -116,7 +116,6 @@ button {
     border: solid 1px #22333B;
     height: 30px;
     width: 270px;
-    margin-top: -15px;
 }
 
 #submit {
